============ Version 0.2

2008-05-20  Philip Withnall  <philip@tecnocode.co.uk>

	* .bzrignore: Updated bzr ignore list.
	* NEWS:
	* configure.ac:
	* README: Bump to version 0.2.

2008-05-20  Philip Withnall  <philip@tecnocode.co.uk>

	* configure.ac:
	* src/storage-manager.c: Made encrypted database support optional,
	and cleaned up the code a little.

2008-05-20  Philip Withnall  <philip@tecnocode.co.uk>

	* src/interface.c:
	* src/interface.h:
	* src/main-window.c:
	* src/Makefile.am:
	* src/printing.c:
	* src/printing.h:
	* src/storage-manager.h:
	* data/diary.ui: Add printing support.
	* configure.ac: Remove redundant dependency on libcryptui.
	* intltool-extract.in:
	* intltool-merge.in:
	* intltool-update.in: Upgrade intltool scripts.

2008-04-19  Philip Withnall  <philip@tecnocode.co.uk>

	* src/main-window.c:
	* src/storage-manager.c: Make deletion of entries more robust, and
	fix display of the "Add Link" dialogue when opened for a second time.

2008-04-10  Philip Withnall  <philip@tecnocode.co.uk>

	* src/main-window.c:
	* src/storage-manager.c: Fix use of memory after freeing it, and
	actually delete entries from the database when they're blanked.

2008-04-08  Philip Withnall  <philip@tecnocode.co.uk>

	* configure.ac:
	* data/diary.ui:
	* src/Makefile.am:
	* src/main-window.c:
	* src/main.c:
	* src/main.h:
	* src/storage-manager.c:
	* src/storage-manager.h: Add encryption support for the database, with
	full backwards-compatibility for the old database filename. Also make
	sure to save the current entry on quitting.

2008-04-03  Philip Withnall  <philip@tecnocode.co.uk>

	* COPYING:
	* src/add-link-dialog.c:
	* src/add-link-dialog.h:
	* src/interface.c:
	* src/interface.h:
	* src/link.c:
	* src/link.h:
	* src/main-window.c:
	* src/main-window.h:
	* src/main.c:
	* src/main.h:
	* src/storage-manager.c:
	* src/storage-manager.h: Relicensed from GPLv2+ to GPLv3+.

2008-04-02  Philip Withnall  <philip@tecnocode.co.uk>
